test/functions/iterators/vass/const-ref-iterator-1.future
bug: yielding a non-const variable from a 'const ref' iterator is allowed

Issue #6142
